tests/baselines/reference/relativePathToDeclarationFile.errors.txt
tests/cases/conformance/externalModules/test/foo.d.ts(1,23): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/conformance/externalModules/test/file1.ts (0 errors) ====
    import foo = require('foo');
    import other = require('./other');
    import relMod = require('./sub/relMod');
    
    if(foo.M2.x){
    	var x = new relMod(other.M2.x.charCodeAt(0));
    }
    
==== tests/cases/conformance/externalModules/test/foo.d.ts (1 errors) ====
    export declare module M2 {
                          ~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
    	export var x: boolean;
    }
    
==== tests/cases/conformance/externalModules/test/other.d.ts (0 errors) ====
    export declare module M2 {
    	export var x: string;
    }
    
==== tests/cases/conformance/externalModules/test/sub/relMod.d.ts (0 errors) ====
    declare class Test {
    	constructor(x: number);
    }
    export = Test;
    